added 'n.events.column' argument to 'hotspots' function
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/deadcanmove@26 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/NEWS
+++ b/pkg/NEWS
@@ -1,4 +1,11 @@
 ==========================================
+DeadCanMove v0.5 (committed 28/03/2017)
+==========================================
+
+Added 'n.events.column' argument to 'hotspots' function
+
+
+==========================================
 DeadCanMove v0.4 (committed 22/04/2016)
 ==========================================
 
